[gd_scene load_steps=9 format=2]

[ext_resource path="res://materials/dock_spotlight.tres" type="Material" id=1]
[ext_resource path="res://scripts/Station/OpenDock.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]
margin = 0.1
extents = Vector3( 15, 10, 15 )

[sub_resource type="CylinderShape" id=2]
radius = 2.5
height = 2.5

[sub_resource type="PrismMesh" id=3]
size = Vector3( 2, 6, 0.1 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.196078, 0.196078, 0.196078, 1 )
metallic = 0.86
roughness = 0.72

[sub_resource type="CubeMesh" id=5]
material = SubResource( 4 )
size = Vector3( 20, 0.5, 20 )

[sub_resource type="CylinderMesh" id=6]

[node name="OpenDock" type="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 50, 0 )
gravity = 0.0
linear_damp = 0.0
angular_damp = 0.0
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="DockShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0456238, 9.97748, 0.0695038 )
shape = SubResource( 1 )

[node name="Touchdown" type="Area" parent="."]
collision_layer = 2
collision_mask = 2

[node name="TouchdownShape" type="CollisionShape" parent="Touchdown"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25, 0 )
shape = SubResource( 2 )

[node name="Center" type="Position3D" parent="."]

[node name="DirectionIndicator" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -10 )
mesh = SubResource( 3 )
material/0 = null

[node name="Platform" type="MeshInstance" parent="."]
mesh = SubResource( 5 )
material/0 = null

[node name="TRLight" type="Spatial" parent="."]
transform = Transform( 0.674289, -0.438169, 0.594426, -0.738467, -0.400089, 0.542766, 3.22794e-08, -0.804946, -0.593349, 10, 3, -10 )

[node name="SpotLight" type="SpotLight" parent="TRLight"]
spot_range = 100.0
spot_attenuation = 9.0

[node name="MeshInstance" type="MeshInstance" parent="TRLight"]
transform = Transform( 1, -5.56402e-09, -1.16261e-08, 6.04924e-08, -1.19209e-07, -1, 3.04567e-08, 1, -2.68221e-07, 0, 0, 0 )
mesh = SubResource( 6 )
material/0 = ExtResource( 1 )

[node name="TLLight" type="Spatial" parent="."]
transform = Transform( 0.674289, 0.438169, -0.594426, 0.738467, -0.400089, 0.542766, -3.22794e-08, -0.804946, -0.593349, -10, 3, -10 )

[node name="SpotLight" type="SpotLight" parent="TLLight"]
transform = Transform( 1, -2.98023e-08, 2.98023e-08, -5.96046e-08, 1, 0, -5.96046e-08, -1.49012e-08, 1, -0.00901031, -0.0594749, -0.00860596 )
spot_range = 100.0
spot_attenuation = 9.0

[node name="MeshInstance" type="MeshInstance" parent="TLLight"]
transform = Transform( 1, 5.56402e-09, 1.16261e-08, -6.04924e-08, -1.19209e-07, -1, -3.04567e-08, 1, -2.68221e-07, 0, 0, 0 )
mesh = SubResource( 6 )
material/0 = ExtResource( 1 )

[node name="BRLight" type="Spatial" parent="."]
transform = Transform( 0.674289, 0.438169, 0.594426, -0.738467, 0.400089, 0.542766, 3.22794e-08, -0.804946, 0.593349, 10, 3, 10 )

[node name="SpotLight" type="SpotLight" parent="BRLight"]
transform = Transform( 1, -2.98023e-08, -2.98023e-08, -5.96046e-08, 1, 0, 5.96046e-08, 1.49012e-08, 1, -0.0274353, -0.049511, 0.0221405 )
spot_range = 100.0
spot_attenuation = 9.0

[node name="MeshInstance" type="MeshInstance" parent="BRLight"]
transform = Transform( 1, 3.30799e-08, -6.18155e-09, 1.138e-08, -1.78814e-07, -1, -1.62227e-08, 1, -2.08616e-07, 0, 0, 0 )
mesh = SubResource( 6 )
material/0 = ExtResource( 1 )

[node name="BLLight" type="Spatial" parent="."]
transform = Transform( 0.674289, -0.438169, -0.594426, 0.738467, 0.400089, 0.542766, -3.22794e-08, -0.804946, 0.593349, -10, 3, 10 )

[node name="SpotLight" type="SpotLight" parent="BLLight"]
spot_range = 100.0
spot_attenuation = 9.0

[node name="MeshInstance" type="MeshInstance" parent="BLLight"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
mesh = SubResource( 6 )
material/0 = ExtResource( 1 )
[connection signal="area_entered" from="." to="." method="_on_OpenDock_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_OpenDock_area_exited"]
[connection signal="area_entered" from="Touchdown" to="." method="_on_Touchdown_area_entered"]
[connection signal="area_exited" from="Touchdown" to="." method="_on_Touchdown_area_exited"]
